--- a/homework2/lesson1.html
+++ b/homework2/lesson1.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head><link rel="stylesheet" href="lesson2css.css"></head>
+  <head><link rel="stylesheet" type="text/css" href="lesson2css.css"></head>
   <h1>Connect MySQL Form</h1>
   <div class="wpcf7" id="wpcf7-f156-p143-o1 formwrap">
-      <form action="lesson3.php" method="post" class="wpcf7-form" enctype="multipart/form-data" novalidate="novalidate">
+      <form action="lesson3.php" method="post" class="wpcf7-form" enctype="multipart/form-data">
           <p>
               <span>
-              <input type="text" name="title" size="40" class="emailinput wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="Title" required autofocus>
+              <input type="text" name="title"  size="40" class="emailinput wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" placeholder="Title" required autofocus>
             </span>
             <span>
-              <input type="text" name="short" size="40" class="emailinput wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="Short" required>
+              <input type="text" name="short"  size="40" class="emailinput wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" placeholder="Short" required>
             </span>
             <span class="wpcf7-form-control-wrap Message">
-              <textarea name="content" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Content" required></textarea>
+              <textarea name="content" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" placeholder="Content" required></textarea>
             </span>
             <span>
-                  <input type="file" name="photo" id="file" accept=".jpg, .jpeg, .png">
-                  <label for="file">choose a photo</label>
+                  <input type="file" name="image" id="file" accept=".jpg, .jpeg, .png"/ required>
+                  <label for="file" />choose a photo</label>
                   <br>
             </span>
             <input type="submit" value="Submit" class="wpcf7-form-control wpcf7-submit btn">
